[project]
name = "uv-lib-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "obayemi", email = "obayemi@ikjpz.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
